# treemk

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  PKGBUILD  README.md  TODO.txt  build-preview-bundle.sh  build-rpm.sh  bundle-css.sh  create_dmg.sh  create_dmg_enhanced.sh  deploy-windows.bat  deploy-windows.ps1  download-js-libs.sh  install_manifest.txt  installer.iss  mkdocs.yml  package.json  requirements.txt  serve-docs.sh
.github/: CI_CD.md  macos-dmg-build.yml
.github/workflows/: appimage-build.yml  build-appimage.yml  build-installers.yml  build-linux-deb-x64.yml  build-linux-rpm-x64.yml  build-macos-arm64.yml  build-windows-x64.yml  deb-build.yml  docs.yml  macos-dmg-build.yml  rpm-build.yml  windows-build.yml  windows-installer.yml
docs/: 404.html  index.html  search.html  sitemap.xml  status.md
docs/ai-assistant/: index.html
docs/code-blocks/: index.html
docs/contributing/: index.html
docs/diagrams/: index.html
docs/editor/: index.html
docs/exporting/: index.html
docs/faq/: index.html
docs/formulas/: index.html
docs/getting-started/: index.html
docs/installation/: index.html
docs/javascripts/: mermaid-init.js
docs/keyboard-shortcuts/: index.html
docs/license/: index.html
docs/navigation/: index.html
docs/preview/: index.html
docs/search/: search_index.json
docs/settings/: index.html
docs/stylesheets/: extra.css
docs/themes-and-appearance/: index.html
docs/workflows/: index.html
include/: aiassistdialog.h  appinit.h  colorpalette.h  defs.h  filesystemtreeview.h  fileutils.h  formuladialog.h  helpdialog.h  linkparser.h  mainwindow.h  markdowneditor.h  markdownhighlighter.h  markdownpreview.h  navigationhistory.h  outlinepanel.h  quickopendialog.h  regexpatterns.h  regexutils.h  searchdialog.h  searchengine.h  settingsdialog.h  shortcutmanager.h  shortcutsdialog.h  sidebarpanel.h  systempromptsdialog.h  tabeditor.h  thememanager.h  tocgenerator.h  wordpredictor.h
include/backlinks/: backlinksmanager.h
include/logic/: aiprovider.h  mainfilelocator.h  ollamaprovider.h  openaiprovider.h  systemprompts.h
include/managers/: windowmanager.h  workspacemanager.h
resources/: Info.plist.in  katex.min.css  preview-base.css  preview-bundle.min.js  preview-dark.css  preview-light.css  preview-sepia.css  preview-template.html  resources.qrc  task-list.css  theme-dark.css  theme-light.css  treemk.desktop  treemk.icns
resources/help/: README.md  ai-assistant.md  code-blocks.md  contributing.md  diagrams.md  editor.md  exporting.md  faq.md  formulas.md  getting-started.md  index.md  installation.md  keyboard-shortcuts.md  license.md  navigation.md  preview.md  settings.md  themes-and-appearance.md  workflows.md
resources/js/: preview-bundle.min.js
src/: aiassistdialog.cpp  filesystemtreeview.cpp  formuladialog.cpp  linkparser.cpp  main.cpp  mainwindow.cpp  mainwindow_about.cpp  mainwindow_actions.cpp  mainwindow_edit.cpp  mainwindow_export.cpp  mainwindow_file.cpp  mainwindow_insert.cpp  mainwindow_tabs.cpp  mainwindow_ui.cpp  mainwindow_view.cpp  markdowneditor.cpp  markdownhighlighter.cpp  markdownpreview.cpp  navigationhistory.cpp  outlinepanel.cpp  quickopendialog.cpp  searchdialog.cpp  settingsdialog.cpp  shortcutmanager.cpp  shortcutsdialog.cpp  sidebarpanel.cpp  systempromptsdialog.cpp  tabeditor.cpp  thememanager.cpp  tocgenerator.cpp
src/aiassistant/: dialog.cpp  setproviders.cpp  settingsdialog.cpp  settingsdialog_aiassistant.cpp  systemprompts.cpp  systempromptsdialog.cpp
src/backlinks/: backlinksmanager.cpp  manager.cpp
src/filemagement/: filesystemtreeview.cpp  fileutils.cpp  treeview.cpp  utils.cpp
src/help/: helpdialog.cpp
src/logic/: aiprovider.cpp  mainfilelocator.cpp  ollamaprovider.cpp  openaiprovider.cpp  systemprompts.cpp
src/mainwindow/: about.cpp  actions.cpp  aiassistant.cpp  datetime.cpp  edit.cpp  file.cpp  fileops.cpp  focus.cpp  insert.cpp  mainwindow.cpp  mainwindow_about.cpp  mainwindow_actions.cpp  mainwindow_aiassist.cpp  mainwindow_datetime.cpp  mainwindow_edit.cpp  mainwindow_export.cpp  mainwindow_file.cpp  mainwindow_navigation.cpp  mainwindow_tabs.cpp  mainwindow_ui.cpp  mainwindow_view.cpp  mainwindow_view_wikilink.cpp  navigation.cpp  tabs.cpp  toc.cpp  ui.cpp  view.cpp  viewwilinks.cpp
src/managers/: window.cpp  windowmanager.cpp  workspace.cpp  workspacemanager.cpp
src/mkeditor/: blocks.cpp  editor.cpp  highlighter.cpp  image.cpp  keys.cpp  linkdetection.cpp  lists.cpp  markdowneditor.cpp  markdowneditor_image.cpp  markdownhighlighter.cpp  markdownpreview.cpp  preview.cpp  taskmanager.cpp  wordpredictor.cpp
src/search/: engine.cpp  searchengine.cpp
src/settings/: dialog.cpp  settingsdialog.cpp
src/thememanager/: setinittheme.cpp
src/utils/: regexutils.cpp
tests/: CMakeLists.txt  test_markdown_conversion.cpp  test_markdown_helper.cpp  test_markdown_helper.h  test_markdownpreview.cpp
tests/integration/: test_integration.cpp
tests/unit/: test_aiassist_dialog.cpp  test_fileutils.cpp  test_internal_links.cpp  test_linkparser.cpp  test_mainfilelocator.cpp  test_regexpatterns.cpp  test_workspacemanager.cpp
treemk_autogen/: moc_predefs.h  mocs_compilation.cpp
ui/: aiassistdialog.ui  formuladialog.ui  helpdialog.ui  historypanel.ui  quickopendialog.ui  searchdialog.ui  shortcutsdialog.ui  sidebarpanel.ui  systempromptsdialog.ui
